openshift-deploy-simple.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trabalho-final-openshift
  namespace: lab-open-shift-mariana364217
  labels:
    app: trabalho-final-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trabalho-final-openshift
  template:
    metadata:
      labels:
        app: trabalho-final-openshift
    spec:
      containers:
      - name: app
        image: nginx:latest
        ports:
        - name: http
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: trabalho-final-openshift
  namespace: lab-open-shift-mariana364217
  labels:
    app: trabalho-final-openshift
spec:
  type: ClusterIP
  selector:
    app: trabalho-final-openshift
  ports:
  - name: http
    port: 80
    targetPort: http
