service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trabalho-final-openshift
  namespace: lab-open-shift-mariana364217
  labels:
    app: trabalho-final-openshift
spec:
  type: ClusterIP
  selector:
    app: trabalho-final-openshift
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
